# apw-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  features.registry.json  features.registry.schema.json  justfile  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  nightly.yml
.omo/run-continuation/: ses_15dab98a1ffeH6DKzhTatOoxvO.json
crates/apw-engine/: Cargo.toml  README.md
crates/apw-engine/src/: lib.rs
crates/apw-engine/tests/: boundary.rs
crates/apw-gateway/: Cargo.toml  README.md
crates/apw-gateway/src/: lib.rs
crates/apw-gateway/tests/: boundary.rs
crates/apw-kernel/: Cargo.toml  README.md
crates/apw-kernel/src/: algebra.rs  clock.rs  event_store.rs  lib.rs  replay.rs  snapshot.rs  trust.rs
crates/apw-kernel/tests/: boundary.rs
crates/apw-manager/: Cargo.toml  README.md
crates/apw-manager/src/: lib.rs
crates/apw-manager/tests/: boundary.rs
crates/apw-office/: Cargo.toml  README.md
crates/apw-office/src/: lib.rs
crates/apw-office/tests/: boundary.rs
crates/apw-pixel-plugin/: Cargo.toml  README.md
crates/apw-pixel-plugin/src/: lib.rs
crates/apw-pixel-plugin/tests/: boundary.rs
crates/apw-protocol/: Cargo.toml  README.md
crates/apw-protocol/src/: canonical.rs  lib.rs
crates/apw-protocol/tests/: boundary.rs
crates/apw-server/: Cargo.toml  README.md
crates/apw-server/assets/sprites/: manifest.json
crates/apw-server/src/: lib.rs
crates/apw-server/tests/: boundary.rs
crates/apw-store/: Cargo.toml  README.md
crates/apw-store/src/: lib.rs  memory.rs
crates/apw-store/tests/: boundary.rs
docs/: EVENTS.md  FEATURES.md  PIXEL.md
docs/adr/: TEMPLATE.md
docs/sources/: pixtuoid.md
docs/superpowers/: 2026-06-05-apw-rs-roadmap.md
docs/superpowers/plans/: 2026-06-04-forgefabrik-hq-enhancement.md  2026-06-06-M0-COMPREHENSIVE-PRODUCTION-PLAN.md  2026-06-06-M0-EXECUTION-GATES.md  2026-06-06-M0-FINAL-READY.md  2026-06-06-m0-workspace-skeleton-implementation.md
docs/superpowers/plans/_archive/: README.md
docs/superpowers/specs/: 2026-06-05-apw-rs-workspace-skeleton-design.md
tools/apw-cli/: Cargo.toml
tools/apw-cli/src/: main.rs
tools/feature-graph/: Cargo.toml
tools/feature-graph/src/: main.rs
tools/feature-guardian/: Cargo.toml
tools/feature-guardian/src/: checks.rs  main.rs
tools/feature-harvester/: Cargo.toml
tools/feature-harvester/src/: github.rs  main.rs  parse.rs
tools/feature-md/: Cargo.toml
tools/feature-md/src/: main.rs  render.rs
tools/feature-schema/: Cargo.toml
tools/feature-schema/src/: lib.rs
