[workspace]
members = [
    "tools/feature-guardian",
    "tools/feature-md",
    "tools/feature-harvester",
    "tools/feature-graph",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ForgeFabrik Contributors"]
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
