[workspace]
members = [
    # Meta-Tools
    "tools/feature-schema",
    "tools/feature-guardian",
    "tools/feature-md",
    "tools/feature-harvester",
    "tools/feature-graph",
    # UI-Tool
    "tools/apw-cli",
    # All crates
    "crates/apw-protocol",
    "crates/apw-kernel",
    "crates/apw-engine",
    "crates/apw-store",
    "crates/apw-server",
    "crates/apw-office",
    "crates/apw-manager",
    "crates/apw-gateway",
    "crates/apw-pixel-plugin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ForgeFabrik Contributors"]
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "=4.6.1", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace.lints.clippy]
# meta-tool workspace: bikeshedding lints we explicitly allow
too_many_arguments = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
single_char_add_str = "allow"
needless_collect = "allow"
if_same_then_else = "allow"
useless_vec = "allow"
redundant_closure_for_method_calls = "allow"
iter_cloned_collect = "allow"
for_kv_map = "allow"
