[package]
name = "apw-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]

[dependencies]
blake3 = "1.5"
unic-normal = "0.9"
