[package]
name = "apw-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest.workspace = true
apw-protocol = { path = "../../crates/apw-protocol", version = "0.1.0" }
apw-server = { path = "../../crates/apw-server", version = "0.1.0" }

[dev-dependencies]
