[package]
name = "feature-guardian"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "feature-guardian"
path = "src/main.rs"

[dependencies]
feature-schema = { path = "../feature-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
