[package]
name = "feature-harvester"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "feature-harvester"
path = "src/main.rs"

[dependencies]
feature-schema = { path = "../feature-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"

[lints]
workspace = true

