[package]
name = "feature-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared types for the apw-rs Feature Registry (Feature, Source, Target, Dependency, Registry, Role). Consumed by feature-guardian, feature-md, feature-graph, feature-harvester."

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
